y.output
Terminals unused in grammar

   TOKEN_BEGIN
   RESERVE_WORDS
   REGULAR_EXPRESSIONS
   TOKEN_END


Grammar

    0 $accept: program $end

    1 program: statement_list

    2 statement_list: statement
    3               | statement_list statement

    4 statement: directive
    5          | labeled_item
    6          | item

    7 directive: ORG HEXLIT

    8 labeled_item: label item

    9 label: IDENTIFIER COMMA

   10 item: instruction
   11     | data_definition

   12 instruction: LOAD operand
   13            | STORE operand
   14            | JUMP operand
   15            | SKIP operand
   16            | ADD operand
   17            | SUBT operand
   18            | PUT operand
   19            | CLEAR operand

   20 operand: HEXLIT
   21        | IDENTIFIER

   22 data_definition: HEX HEXLIT


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_BEGIN (258)
COMMA (259) 9
RESERVE_WORDS (260)
LOAD (261) 12
STORE (262) 13
JUMP (263) 14
SKIP (264) 15
ADD (265) 16
SUBT (266) 17
PUT (267) 18
CLEAR (268) 19
HEX (269) 22
ORG (270) 7
REGULAR_EXPRESSIONS (271)
IDENTIFIER (272) 9 21
HEXLIT (273) 7 20 22
TOKEN_END (274)


Nonterminals, with rules where they appear

$accept (20)
    on left: 0
program (21)
    on left: 1, on right: 0
statement_list (22)
    on left: 2 3, on right: 1 3
statement (23)
    on left: 4 5 6, on right: 2 3
directive (24)
    on left: 7, on right: 4
labeled_item (25)
    on left: 8, on right: 5
label (26)
    on left: 9, on right: 8
item (27)
    on left: 10 11, on right: 6 8
instruction (28)
    on left: 12 13 14 15 16 17 18 19, on right: 10
operand (29)
    on left: 20 21, on right: 12 13 14 15 16 17 18 19
data_definition (30)
    on left: 22, on right: 11


State 0

    0 $accept: . program $end

    LOAD        shift, and go to state 1
    STORE       shift, and go to state 2
    JUMP        shift, and go to state 3
    SKIP        shift, and go to state 4
    ADD         shift, and go to state 5
    SUBT        shift, and go to state 6
    PUT         shift, and go to state 7
    CLEAR       shift, and go to state 8
    HEX         shift, and go to state 9
    ORG         shift, and go to state 10
    IDENTIFIER  shift, and go to state 11

    program          go to state 12
    statement_list   go to state 13
    statement        go to state 14
    directive        go to state 15
    labeled_item     go to state 16
    label            go to state 17
    item             go to state 18
    instruction      go to state 19
    data_definition  go to state 20


State 1

   12 instruction: LOAD . operand

    IDENTIFIER  shift, and go to state 21
    HEXLIT      shift, and go to state 22

    operand  go to state 23


State 2

   13 instruction: STORE . operand

    IDENTIFIER  shift, and go to state 21
    HEXLIT      shift, and go to state 22

    operand  go to state 24


State 3

   14 instruction: JUMP . operand

    IDENTIFIER  shift, and go to state 21
    HEXLIT      shift, and go to state 22

    operand  go to state 25


State 4

   15 instruction: SKIP . operand

    IDENTIFIER  shift, and go to state 21
    HEXLIT      shift, and go to state 22

    operand  go to state 26


State 5

   16 instruction: ADD . operand

    IDENTIFIER  shift, and go to state 21
    HEXLIT      shift, and go to state 22

    operand  go to state 27


State 6

   17 instruction: SUBT . operand

    IDENTIFIER  shift, and go to state 21
    HEXLIT      shift, and go to state 22

    operand  go to state 28


State 7

   18 instruction: PUT . operand

    IDENTIFIER  shift, and go to state 21
    HEXLIT      shift, and go to state 22

    operand  go to state 29


State 8

   19 instruction: CLEAR . operand

    IDENTIFIER  shift, and go to state 21
    HEXLIT      shift, and go to state 22

    operand  go to state 30


State 9

   22 data_definition: HEX . HEXLIT

    HEXLIT  shift, and go to state 31


State 10

    7 directive: ORG . HEXLIT

    HEXLIT  shift, and go to state 32


State 11

    9 label: IDENTIFIER . COMMA

    COMMA  shift, and go to state 33


State 12

    0 $accept: program . $end

    $end  shift, and go to state 34


State 13

    1 program: statement_list .
    3 statement_list: statement_list . statement

    LOAD        shift, and go to state 1
    STORE       shift, and go to state 2
    JUMP        shift, and go to state 3
    SKIP        shift, and go to state 4
    ADD         shift, and go to state 5
    SUBT        shift, and go to state 6
    PUT         shift, and go to state 7
    CLEAR       shift, and go to state 8
    HEX         shift, and go to state 9
    ORG         shift, and go to state 10
    IDENTIFIER  shift, and go to state 11

    $default  reduce using rule 1 (program)

    statement        go to state 35
    directive        go to state 15
    labeled_item     go to state 16
    label            go to state 17
    item             go to state 18
    instruction      go to state 19
    data_definition  go to state 20


State 14

    2 statement_list: statement .

    $default  reduce using rule 2 (statement_list)


State 15

    4 statement: directive .

    $default  reduce using rule 4 (statement)


State 16

    5 statement: labeled_item .

    $default  reduce using rule 5 (statement)


State 17

    8 labeled_item: label . item

    LOAD   shift, and go to state 1
    STORE  shift, and go to state 2
    JUMP   shift, and go to state 3
    SKIP   shift, and go to state 4
    ADD    shift, and go to state 5
    SUBT   shift, and go to state 6
    PUT    shift, and go to state 7
    CLEAR  shift, and go to state 8
    HEX    shift, and go to state 9

    item             go to state 36
    instruction      go to state 19
    data_definition  go to state 20


State 18

    6 statement: item .

    $default  reduce using rule 6 (statement)


State 19

   10 item: instruction .

    $default  reduce using rule 10 (item)


State 20

   11 item: data_definition .

    $default  reduce using rule 11 (item)


State 21

   21 operand: IDENTIFIER .

    $default  reduce using rule 21 (operand)


State 22

   20 operand: HEXLIT .

    $default  reduce using rule 20 (operand)


State 23

   12 instruction: LOAD operand .

    $default  reduce using rule 12 (instruction)


State 24

   13 instruction: STORE operand .

    $default  reduce using rule 13 (instruction)


State 25

   14 instruction: JUMP operand .

    $default  reduce using rule 14 (instruction)


State 26

   15 instruction: SKIP operand .

    $default  reduce using rule 15 (instruction)


State 27

   16 instruction: ADD operand .

    $default  reduce using rule 16 (instruction)


State 28

   17 instruction: SUBT operand .

    $default  reduce using rule 17 (instruction)


State 29

   18 instruction: PUT operand .

    $default  reduce using rule 18 (instruction)


State 30

   19 instruction: CLEAR operand .

    $default  reduce using rule 19 (instruction)


State 31

   22 data_definition: HEX HEXLIT .

    $default  reduce using rule 22 (data_definition)


State 32

    7 directive: ORG HEXLIT .

    $default  reduce using rule 7 (directive)


State 33

    9 label: IDENTIFIER COMMA .

    $default  reduce using rule 9 (label)


State 34

    0 $accept: program $end .

    $default  accept


State 35

    3 statement_list: statement_list statement .

    $default  reduce using rule 3 (statement_list)


State 36

    8 labeled_item: label item .

    $default  reduce using rule 8 (labeled_item)
